# TemperatureController

./: CMakeLists.txt  README.md
src/: main.cpp  temperaturecontroller.cpp
src/api/: temperaturecontrollerapi.h
test/: CMakeLists.txt  temperaturecontroller_test.cpp
